# serializer version: 1
# name: TestPosterTemplate.test_topic_from_other_public_forum_in_topics_view[topic_from_other_public_forum_in_topics_view]
  '''
  <small class="text-muted poster-infos">
      Par :
              
                  
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="member" href="/members/profile/poster_username/">
                      Alan T.
                  </a>,
              
              
                  dans <a href="forum_url">Abby's Forum</a>,
      il y a 0 minute
      
  </small>
  '''
# ---
# name: TestPosterTemplate.test_topic_in_its_own_public_forum[topic_in_its_own_public_forum]
  '''
  <small class="text-muted poster-infos">
      Par :
              
                  
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="member" href="/members/profile/poster_username/">
                      Dermot T.
                  </a>,
      il y a 0 minute
      
  </small>
  '''
# ---
# name: TestPosterTemplate.test_topic_in_topics_view[topic_in_topics_view]
  '''
  <small class="text-muted poster-infos">
      Par :
              
                  
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="member" href="/members/profile/poster_username/">
                      Jeff B.
                  </a>,
      il y a 0 minute
      
  </small>
  '''
# ---
# name: test_queryset_for_tagged_topic[tagged_topic]
  '''
  <div class="flex-grow-1" id="topic-list-filter-header">
                      <span class="h5 m-0">1 question
                          avec l'étiquette buckley
                      </span>
                  </div>
  '''
# ---
# name: test_queryset_for_tagged_topic[tagged_topics]
  '''
  <div class="flex-grow-1" id="topic-list-filter-header">
                      <span class="h5 m-0">2 questions
                          avec l'étiquette buckley
                      </span>
                  </div>
  '''
# ---
